# paimon-cpp

./: .pre-commit-config.yaml  CMakeLists.txt  api.html  basic_concepts.html  documentations.html  genindex.html  getting_started.html  objects.inv  searchindex.js  user_guide.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  feature.yaml
.github/workflows/: build_docs.yaml  build_release.yaml  clang_test.yaml  gcc_test.yaml  pre-commit.yaml  test_with_sanitizer.yaml
_sources/: basic_concepts.rst.txt  documentations.rst.txt  index.rst.txt  user_guide.rst.txt
_sources/api/: catalog.rst.txt  file_format.rst.txt  file_index.rst.txt  memory.rst.txt  write.rst.txt
_sources/examples/: clean.rst.txt  index.rst.txt
_sources/user_guide/: arrow.rst.txt  read.rst.txt  schema.rst.txt  snapshot.rst.txt
_static/: theme_overrides.css  versions.json
api/: catalog.html  clean.html  commit.html  data_types.html  defs.html  executor.html  file_format.html  file_system.html  io.html  predicate.html  read.html  scan.html
apidoc/html/: abi_8h.html  abi_8h_source.html  annotated.html  api_8h.html  api_8h_source.html  batch__reader_8h.html  batch__reader_8h_source.html  bitmap__global__index__result_8h.html  bitmap__global__index__result_8h_source.html  bitmap__index__result_8h.html  bitmap__index__result_8h_source.html  bitmap__topk__global__index__result_8h.html  bitmap__topk__global__index__result_8h_source.html  blob_8h.html  blob_8h_source.html  bucket__id__calculator_8h.html  bucket__id__calculator_8h_source.html  buffered__input__stream_8h.html  buffered__input__stream_8h_source.html  byte__array__input__stream_8h.html  byte__array__input__stream_8h_source.html  byte__order_8h.html  byte__order_8h_source.html  bytes_8h.html  bytes_8h_source.html  catalog_8h.html  catalog_8h_source.html  classes.html  classpaimon_1_1_basic_file_status-members.html  classpaimon_1_1_basic_file_status.html  classpaimon_1_1_batch_reader-members.html  classpaimon_1_1_batch_reader.html  classpaimon_1_1_big_int_column_stats-members.html  classpaimon_1_1_big_int_column_stats.html  classpaimon_1_1_bitmap_global_index_result-members.html  classpaimon_1_1_bitmap_global_index_result.html  classpaimon_1_1_bitmap_global_index_result_1_1_iterator-members.html  classpaimon_1_1_bitmap_global_index_result_1_1_iterator.html  classpaimon_1_1_bitmap_index_result-members.html  classpaimon_1_1_bitmap_index_result.html  (+486 more)
apidoc/xml/: Doxyfile.xml  abi_8h.xml  api_8h.xml  batch__reader_8h.xml  bitmap__global__index__result_8h.xml  bitmap__index__result_8h.xml  bitmap__topk__global__index__result_8h.xml  blob_8h.xml  bucket__id__calculator_8h.xml  buffered__input__stream_8h.xml  byte__array__input__stream_8h.xml  byte__order_8h.xml  bytes_8h.xml  catalog_8h.xml  classpaimon_1_1_basic_file_status.xml  classpaimon_1_1_batch_reader.xml  classpaimon_1_1_big_int_column_stats.xml  classpaimon_1_1_bitmap_global_index_result.xml  classpaimon_1_1_bitmap_global_index_result_1_1_iterator.xml  classpaimon_1_1_bitmap_index_result.xml  (+217 more)
cmake_modules/: BuildUtils.cmake  SetupCxxFlags.cmake  ThirdpartyToolchain.cmake  san-config.cmake
examples/: clean.html  index.html
src/paimon/: CMakeLists.txt
src/paimon/common/data/: binary_data_read_utils.h  binary_row_test.cpp  blob_utils.cpp
src/paimon/common/file_index/: file_index_format_test.cpp
src/paimon/common/file_index/bitmap/: bitmap_file_index_test.cpp
src/paimon/common/fs/: file_system_test.cpp
src/paimon/common/global_index/: complete_index_score_batch_reader.cpp  complete_index_score_batch_reader.h  complete_index_score_batch_reader_test.cpp  global_index_result.cpp  global_index_result_test.cpp
src/paimon/common/io/: data_input_stream.cpp
src/paimon/common/memory/: memory_segment_test.cpp  memory_segment_utils_test.cpp
src/paimon/common/predicate/: predicate_validator_test.cpp
src/paimon/common/table/: special_fields.h  special_fields_test.cpp
src/paimon/common/utils/: decimal_utils.cpp  math.h  path_util.h  range.cpp  range_test.cpp
src/paimon/core/casting/: cast_executor_test.cpp
src/paimon/core/catalog/: file_system_catalog.cpp  file_system_catalog.h  file_system_catalog_test.cpp
src/paimon/core/global_index/: global_index_scan_impl.cpp  global_index_scan_impl.h  indexed_split_impl.h  indexed_split_test.cpp  row_range_global_index_scanner_impl.cpp  row_range_global_index_scanner_impl.h  row_range_global_index_writer.cpp
src/paimon/core/mergetree/: merge_tree_writer_test.cpp
src/paimon/core/operation/: abstract_split_read.cpp  abstract_split_read.h  data_evolution_file_store_scan_test.cpp  data_evolution_split_read.cpp  data_evolution_split_read.h  data_evolution_split_read_test.cpp  file_store_commit_impl_test.cpp  file_store_scan.h  internal_read_context.cpp  internal_read_context.h  internal_read_context_test.cpp  merge_file_split_read.cpp  merge_file_split_read.h  raw_file_split_read.cpp  raw_file_split_read.h  read_context.cpp  read_context_test.cpp  split_read.h
src/paimon/core/schema/: schema_impl.h  table_schema.cpp  table_schema.h
src/paimon/core/table/source/: append_only_table_read.cpp  append_only_table_read.h  data_split_impl.cpp  data_split_impl.h  data_split_test.cpp  data_table_batch_scan.cpp  fallback_data_split_test.cpp  fallback_table_read.cpp  fallback_table_read.h  key_value_table_read.cpp  key_value_table_read.h  plan_impl.cpp  plan_impl.h  split.cpp  table_read.cpp
src/paimon/core/table/source/snapshot/: snapshot_reader.cpp  snapshot_reader.h  starting_scanner.h
src/paimon/format/lance/: lance_reader_builder.h
src/paimon/format/orc/: orc_file_batch_reader.cpp  orc_input_output_stream_test.cpp
src/paimon/fs/local/: local_file.cpp  local_file.h  local_file_system.cpp  local_file_test.cpp
src/paimon/global_index/lumina/: lumina_file_writer.h
src/paimon/testing/mock/: mock_file_batch_reader.h
src/paimon/testing/utils/: test_helper.h  timezone_guard.h
user_guide/: append_only_table.html  catalog.html  data_types.html  manifest.html  schema.html  snapshot.html  write.html
(+278 files in other folders)
